--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-16  Geoffrey Keating  <geoffk@apple.com>
+
+	* cp-tree.h (union lang_tree_node): Add chain_next option.
+
 2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* parse.y (parse_finish_call_expr): Check lookup_member result.
