--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-16  Geoffrey Keating  <geoffk@apple.com>
+
+	* java-tree.h (union lang_tree_node): Add chain_next option.
+
 2002-09-16  Richard Henderson  <rth@redhat.com>
 
 	* jcf-parse.c (get_constant): Runtime check for IEEE format;
