--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-16  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* calls.c (emit_library_call_value_1): Don't refer to
+	hard_libcall_value.
+	* optabs.c (prepare_float_lib_cmp): Likewise.
+
 2002-09-16  Geoffrey Keating  <geoffk@apple.com>
 
 	* ggc-common.c (ggc_mark_rtx_children_1): Update for changed name
