--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
+
+	Remove DR 295 implementation.
+	* pt.c (check_cv_quals_for_unify): Disable function & method cases.
+	* tree.c (cp_build_qualified_type_real): Likewise. Don't warn
+	about ignoring volatile qualifiers.
+
+	* search.c (lookup_member): Correct documentation.
+
 2002-09-16  Geoffrey Keating  <geoffk@apple.com>
 
 	* cp-tree.h (union lang_tree_node): Add chain_next option.
