cp: 	PR c++/7718 	* pt.c (tsubst_decl): Remove assert. testsuite: 	* g++.dg/template/subst1.C: New test.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57211 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,8 @@
 2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
 
+	PR c++/7718
+	* pt.c (tsubst_decl): Remove assert.
+
 	Remove DR 295 implementation.
 	* pt.c (check_cv_quals_for_unify): Disable function & method cases.
 	* tree.c (cp_build_qualified_type_real): Likewise. Don't warn
