--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,8 +1,16 @@
+2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/template/subst1.C: New test.
+	
 2002-09-16  Steve Ellcey  <sje@cup.hp.com>
 
 	* gcc.dg/20020312-2.c: Change __parisc__ to __hppa__.
 
 2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/template/qualttp20.C: Adjust expected errors.
+	* g++.old-deja/g++.jason/report.C: Likewise.
+	* g++.old-deja/g++.other/qual1.C: Likewise.
 
 	* g++.dg/lookup/scoped2.C: New test.
 
