--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* c-semantics.c (genrtl_do_stmt): Cope with NULL cond.
+
 2002-09-16  Geoffrey Keating  <geoffk@redhat.com>
 
 	* config/rs6000/rs6000.c (build_mask64_2_operands): Suppress
