--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.dg/other/do1.C: New test.
+	
 	* g++.dg/template/subst1.C: New test.
 	
 2002-09-16  Steve Ellcey  <sje@cup.hp.com>
