--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-16  Tom Tromey  <tromey@redhat.com>
+
+	* java/net/URLClassLoader.java (findClass): Code source for a
+	class from a jar is not necessarily a jar: URL.
+
 2002-09-16  Michael Koch  <konqueror@gmx.de>
 
 	* java/lang/AssertionError.java:
