* libgcc2.c: Do not include machmode.h.
From-SVN: r57218

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-16  Jeff Law <law@redhat.com>
+
+        * libgcc2.c: Do not include machmode.h.
+
 2002-09-16  Jason Merrill  <jason@redhat.com>
 	    Danny Smith  <dannysmith@users.sourceforge.net>
 
