--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-16  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/bits/codecvt.h: Remove __s.
+	* config/locale/gnu/codecvt_members.cc: Remove _M_c_locale_codecvt
+	usage, substitute _S_c_locale.
+
 2002-09-12  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* libmath/Makefile.am (LIBTOOL): Use --tag CC always for this
