--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-16  Loren J. Rittle  <ljrittle@acm.org>
+
+	libstdc++/7922
+	* include/ext/stl_rope.h (rope<>): Qualify dependent names
+	with `typename'.
+
 2002-09-16  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/bits/codecvt.h: Remove __s.
