--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-16  Richard Henderson  <rth@redhat.com>
+
+	PR opt/7515
+	* c-objc-common.c (c_cannot_inline_tree_fn): Don't auto-inline
+	functions that don't bind locally.
+
 2002-09-17  Alan Modra  <amodra@bigpond.net.au>
 
 	Merge from mainline.
