--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-16  Richard Henderson  <rth@redhat.com>
 
+	PR fortran/3924
+        * sdbout.c (sdbout_symbol): Don't handle offsets from a symbol.
+
+2002-09-16  Richard Henderson  <rth@redhat.com>
+
 	* emit-rtl.c (set_mem_attributes_minus_bitpos): Adjust SIZE
 	as well as OFFSET for BITPOS.
 
