--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-17  Zack Weinberg  <zack@codesourcery.com>
+
+	* Make-lang.in: Remove all references to the demangler.
+	* cxxfilt.c: Moved to binutils.
+
 2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/7718
@@ -123,7 +128,7 @@
 	* class.c (layout_virtual_bases): Warn about bugs in G++ that
 	result in incorrect object layouts.
 	(layout_class_type): Likewise.
-	
+
 2002-08-24  Matt Austern  <austern@apple.com>
 
 	* tree.c (lvalue_p_1): Add argument for whether casts of lvalues
@@ -132,7 +137,7 @@
 	(lvalue_p): Ditto.
 	(non_cast_lvalue_or_else): New.
 	* tree.h: Declare it.
-        * typeck.c (build_unary_op): Use non_cast_lvalue_or_else.
+	* typeck.c (build_unary_op): Use non_cast_lvalue_or_else.
 
 2002-08-22  Mark Mitchell  <mark@codesourcery.com>
 
@@ -221,7 +226,7 @@
 	* search.c (adjust_result_of_qualified_name_lookup): New function.
 	* typeck.c (qualify_type_recursive): Use TYPE_PTRMEM_* rather than
 	accessing OFFSET_TYPEs directly.
-	
+
 2002-08-08  Mike Stump  <mrs@apple.com>
 
 	* call.c (add_builtin_candidate): legal -> valid, illegal -> invalid.
@@ -541,8 +546,8 @@
 
 	* call.c (build_over_call): Likewise.
 	(cp_convert_parm_for_inlining): New fn.
-        (convert_for_arg_passing): New fn.
-        (convert_default_arg, build_over_call): Use it.
+	(convert_for_arg_passing): New fn.
+	(convert_default_arg, build_over_call): Use it.
 	(type_passed_as): New fn.
 	* pt.c (tsubst_decl): Use it.
 	* decl2.c (cp_build_parm_decl): New fn.
@@ -944,8 +949,8 @@
 2002-06-20  Richard Henderson  <rth@redhat.com>
 
 	PR c++/6747
-        * typeck.c (mark_addressable): Don't test TREE_ADDRESSABLE early.
-        Call put_var_into_stack.
+	* typeck.c (mark_addressable): Don't test TREE_ADDRESSABLE early.
+	Call put_var_into_stack.
 
 2002-06-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
