--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-17  Roger Sayle  <roger@eyesopen.com>
+
+	* cfgrtl.c (flow_delete_block_noexpunge): Delete orphaned
+	NOTE_INSN_LOOP_CONT notes when deleting basic blocks.
+
 2002-09-16  Richard Henderson  <rth@redhat.com>
 
 	* expr.c (emit_block_move): Set memory block size as appropriate
