New tests for ObjC typechecking
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57251 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,12 @@
+Tue Sep 17 13:59:45 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* objc.dg/comp-types-1.m: New test.
+	* objc.dg/comp-types-2.m: New test.
+	* objc.dg/comp-types-3.m: New test.
+	* objc.dg/comp-types-4.m: New test.
+	* objc.dg/comp-types-5.m: New test.
+	* objc.dg/comp-types-6.m: New test.	
+
 2002-09-17  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* gcc.c-torture/execute/strct-stdarg-1.x: Remove file.
