--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-17  Steve Ellcey  <sje@cup.hp.com>
+
+        * config/ia64/elf.h: Remove CPP_PREDEFINES.
+
 Tue Sep 17 13:58:04 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	Fix PR/7014 and related objc bugs:
