--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-17  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* optabs.c (prepare_cmp_insn): Let emit_library_call_value
+	generate a pseudo reg that receives the result of a libcall.
+	(prepare_float_lib_cmp): Likewise.
+
 2002-09-17  Steve Ellcey  <sje@cup.hp.com>
 
         * config/ia64/elf.h: Remove CPP_PREDEFINES.
