--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-17  Nick Clifton  <nickc@redhat.com>
+
+	* config/arm/arm.c (output_return_instruction): Do not
+	writeback the stack pointer when it is being loaded.
+	(arm_output_epilogue): Likewise.
+
 2002-09-17  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* optabs.c (prepare_cmp_insn): Let emit_library_call_value
