--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-17  Tom Tromey  <tromey@redhat.com>
+
+	* lex.c (java_read_unicode_collapsing_terminators): Handle case
+	where \r appears at EOF.  Fixes PR java/7950.
+
 2002-09-16  Geoffrey Keating  <geoffk@apple.com>
 
 	* java-tree.h (union lang_tree_node): Add chain_next option.
