--- a/gcc/doc/tm.texi
+++ b/gcc/doc/tm.texi
@@ -7577,6 +7577,11 @@ A C statement to output to the stdio stream @var{stream} an assembler
 command to advance the location counter to a multiple of 2 to the
 @var{power} bytes.  @var{power} will be a C expression of type @code{int}.
 
+@findex ASM_OUTPUT_ALIGN_WITH_NOP
+@item ASM_OUTPUT_ALIGN_WITH_NOP (@var{stream}, @var{power})
+Like @code{ASM_OUTPUT_ALIGN}, except that the ``nop'' instruction is used
+for padding, if necessary.
+
 @findex ASM_OUTPUT_MAX_SKIP_ALIGN
 @item ASM_OUTPUT_MAX_SKIP_ALIGN (@var{stream}, @var{power}, @var{max_skip})
 A C statement to output to the stdio stream @var{stream} an assembler
