--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,9 +1,28 @@
+2002-09-17  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/alpha/alpha.c: Follow spelling conventions.
+	* config/alpha/alpha.h: Likewise.
+	* config/alpha/alpha.md: Likewise.
+	* config/arc/arc.h: Likewise.
+	* config/arm/arm.c: Likewise.
+	* config/arm/arm.h: Likewise.
+	* config/arm/arm.md: Likewise.
+	* config/arm/pe.c: Likewise.
+	* config/arm/unknown-elf.h: Likewise.
+	* config/avr/avr.c: Likewise.
+	* config/avr/avr.h: Likewise.
+	* config/c4x/c4x.c: Likewise.
+	* config/cris/cris.c: Likewise.
+	* config/cris/cris.h: Likewise.
+
 2002-09-17  Samuel Figueroa  <figueroa@apple.com>
+
 	* final.c (final_scan_insn): Use new macro ASM_OUTPUT_ALIGN_WITH_NOP.
 	* config/sparc/sparc.h (ASM_OUTPUT_ALIGN_WITH_NOP) New macro.
 	* doc/tm.texi (ASM_OUTPUT_ALIGN_WITH_NOP) New description.
 
 2002-09-17  Dale Johannesen  <dalej@apple.com>
+
 	* cfgcleanup.c (try_forward_edges):  Do not forward a
 	branch to just after a loop exit before loop optimization;
 	this interfered with doloop detection.
