--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-18  Richard Earnshaw  (reanrsha@arm.com)
+
+	PR optimization/7967
+	* arm.md (ne_zeroextractsi): Add clobber of the condition code
+	register.
+
 2002-09-18  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/s390/s390.c: Follow spelling convention.
