re PR rtl-optimization/7967 (optimization produces wrong code (ARM))
PR optimization/7967
* arm.md (ne_zeroextractsi): Add clobber of the condition code
register.

From-SVN: r57279

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-18  Richard Earnshaw (rearnsha@arm.com)
+
+	PR optimization/7967
+	* arm.md (ne_zeroextractsi): Add clobber of the condition code
+	register.
+
 2002-09-17  Richard Henderson  <rth@redhat.com>
 
 	* sibcall.c (optimize_sibling_and_tail_recursive_call): Also remove
