--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-09-19  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.md: (floatdisf2): Rename to
+	floatdisf2_internal1.
+	(floatdisf2): New define_expand.
+	(floatdisf2_internal2): Likewise.
+
 2002-09-18  Richard Henderson  <rth@redhat.com>
 
 	* real.c (sticky_rshift_significand): Collect sticky as 
