--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-18  Richard Henderson  <rth@redhat.com>
 
+	* sibcall.c (optimize_sibling_and_tail_recursive_call): Also remove
+	RTX_UNCHANGING_P markers for successful tail-recursive replacement.
+
+2002-09-18  Richard Henderson  <rth@redhat.com>
+
 	* real.c (round_for_format): Collect sticky as unsigned long, not bool.
 
 2002-09-19  Alan Modra  <amodra@bigpond.net.au>
