* toplev.c (backend_init): Move init_real_once invocation ...         (do_compile): ... here.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57291 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-18  Richard Henderson  <rth@redhat.com>
 
+	* toplev.c (backend_init): Move init_real_once invocation ...
+	(do_compile): ... here.
+
+2002-09-18  Richard Henderson  <rth@redhat.com>
+
 	* sibcall.c (optimize_sibling_and_tail_recursive_call): Also remove
 	RTX_UNCHANGING_P markers for successful tail-recursive replacement.
 
