--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-18  Richard Henderson  <rth@redhat.com>
 
+	* calls.c (store_one_arg): Rename default_align to parm_align;
+	always adjust parm_align for downward padding.
+
+2002-09-18  Richard Henderson  <rth@redhat.com>
+
 	* toplev.c (backend_init): Move init_real_once invocation ...
 	(do_compile): ... here.
 
