2002-09-19  Stephen Clarke <stephen.clarke@superh.com>
	* config/sh/sh.h (UNSPEC_GOTOFF_P): Define.
	(GOTOFF_P): Extend to allow gotoff plus constant.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57302 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-19  Stephen Clarke <stephen.clarke@superh.com>
+
+	* config/sh/sh.h (UNSPEC_GOTOFF_P): Define.
+	(GOTOFF_P): Extend to allow gotoff plus constant.
+
 2002-09-18  Richard Henderson  <rth@redhat.com>
 
 	* ifcvt.c (noce_process_if_block): Correctly detect X modified
